--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <div>
-      <h1>THERMOSTAT</h1>
-      <div class="temperature">
-        <h2>20 °C</h2>
-        <button>UP</button>
-        <button>DOWN</button>
-        <button>RESET</button>
-      </div>
+    <header>
+      <h1 class="thermostat">THERMOSTAT</h1>
+    </header>
+    <div class="temperature">
+      <h2>20°C</h2>
+      <button>UP</button>
+      <button>DOWN</button>
+      <button class="reset-button">RESET</button>
     </div>
     <div class="power-saving-mode">
       <h2>POWER SAVING MODE</h2>
@@ -26,7 +26,7 @@
       <span>MEDIUM</span>
       <span>HIGH</span>
     </div>
-    <script src="src/thermostat.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="src/thermostat.js"></script>
   </body>
 </html>
