Implement Power Saving Mode functionality using JQuery

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     <div class="power-saving-mode">
       <h2>POWER SAVING MODE</h2>
-      <button id="power_saving-on">ON</button>
-      <button id="power_saving-off">OFF</button>
+      <button id="power_saving-on" class="black">ON</button>
+      <button id="power_saving-off" class="black">OFF</button>
     </div>
     <div class="energy-usage">
       <h2>ENERGY USAGE</h2>
