--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="src/thermostat.js"></script>
     <script src="interface.js"></script>
+
+    <div id = weather> 
+      <p>
+      </p>
+      <div>
+
   </body>
 </html>
