pulls weather icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <header>
       <h1 class="thermostat">THERMOSTAT</h1>
     </header>
+
+    <div  id = "icon">
+    </div>
+    <div id = "weather">
+    </div> <p> °C </p>
+
     <div class="temperature">
       <h2 id="degrees">°C</h2>
       <h2>°C</h2>
@@ -31,10 +37,10 @@
     <script src="src/thermostat.js"></script>
     <script src="interface.js"></script>
 
-    <div id = weather> 
-      <p>
-      </p>
-      <div>
+
+
+
+
 
   </body>
 </html>
