Edit local weather CSS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <div class="temperature">
       <h2 id="degrees">°C</h2>
       <h2>°C</h2>
-      <button id="temperature-up">UP</button>
-      <button id="temperature-down">DOWN</button>
-      <button id="temperature-reset" class="reset-button">RESET</button>
+      <div class="temperature-buttons">
+        <button id="temperature-up">UP</button>
+        <button id="temperature-down">DOWN</button>
+        <button id="temperature-reset" class="reset-button">RESET</button>
+      </div>
     </div>
     <div class="local-weather">
       <div id="icon">
